contact us button commented

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 								</div>
 							</div> -->
                         <!-- BUTTONS SECTION -->
-                        <div class="buttons centered">
+                       <!-- <div class="buttons centered">
                             <a href="mailto:mywabinfo@gmail.com" class="icon icon-mail light-green">Contact us</a>
-                        </div>
+                        </div>  -->
+
                         <div class="row text-center">
 
                             <div class="col-md-6">
