--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                         <div class="row text-center">
 
-                            <div class="col-md-3">
+                            <div class="col-md-3 mt-5">
                                 <a class="btn-floating blue accent-1">
                                     <i class="fas fa-phone-volume fa-2x" style="margin-bottom: 6px;"></i>
                                 </a>
@@ -113,7 +113,7 @@
                             <!-- <a href="https://www.spotify.com" class="spotify" target="_blank"></a> -->
                         </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3 mt-5">
                                 <a class="btn-floating blue accent-1">
                                     <i class="fas fa-envelope fa-2x" style="margin-bottom: 6px;"></i>
                                 </a>
