submit button chanche

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                             <div class="msg"></div>
 
-                            <button class="btn" type="submit" data-sending="Sending...">Send request</button>
+                            <button class="btn" type="submit">Send request</button>
                         </section>
                     </form>
                     <!-- END - Contact Form -->
