--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <input type="tel" name="phone" data-displayname="Phone" class="field" placeholder="Your phone number" required>
                             </div>
                             <div class="form-row">
-                                <div class="title">Your phone number</div>
+                                <div class="title">Your Message</div>
                                 <textarea id="form_message" name="message" class="form-control" placeholder="Message me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                             </div>
 
