--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <!-- To enable Google Invisible reCAPTCHA, uncomment the next line -->
                             <!-- <div class="re-captcha invisible" data-sitekey="YOUR_SITE_KEY_HERE"></div> -->
 
-                            <div class="msg"></div>
+                            <div class="msg">Thanks we contact you soon!</div>
 
                             <button class="btn" type="submit">Send request</button>
                         </section>
