--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
                                 <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
                             </div>
                              <div class="col-md-6">
-                                <a href="https://www.google.com/maps/place/Singapore/@1.4740317,103.9648893,13z/data=!4m5!3m4!1s0x31da11238a8b9375:0x887869cf52abf5c4!8m2!3d1.352083!4d103.819836">21 Jackson BLVD 120<br />LOS ANGELES</a>
-                            </div>
+                                 <a href="https://www.google.com/maps/place/Singapore/@1.2758582,103.5534761,10.75z/data=!4m5!3m4!1s0x31da11238a8b9375:0x887869cf52abf5c4!8m2!3d1.352083!4d103.819836" target="_blank" class="address">21 Jackson BLVD 120<br />LOS ANGELES</a>                            </div>
                             <div class="col-md-3">
                                 <a class="btn-floating blue accent-1">
                                     <i class="fas fa-envelope fa-2x" style="margin-bottom: 6px;"></i>
