--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
                             </div>
                              <div class="col-md-6">
-                                 <a href="https://www.google.com/maps/place/Singapore/@1.2758582,103.5534761,10.75z/data=!4m5!3m4!1s0x31da11238a8b9375:0x887869cf52abf5c4!8m2!3d1.352083!4d103.819836" target="_blank" class="address">21 Jackson BLVD 120<br />LOS ANGELES</a>                            </div>
+                                 <a href="https://www.google.com/maps/place/Singapore+Zoo/@1.4043539,103.7908343,17z/data=!3m1!4b1!4m5!3m4!1s0x31da13d9102adcaf:0xb414fac8a43b1b91!8m2!3d1.4043485!4d103.793023" target="_blank" class="address">21 Jackson BLVD 120<br />LOS ANGELES</a>                            </div>
                             <div class="col-md-3">
                                 <a class="btn-floating blue accent-1">
                                     <i class="fas fa-envelope fa-2x" style="margin-bottom: 6px;"></i>
