--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                         </div>
                         
                         <div class="social">
-                            <!-- <a href="https://www.facebook.com" class="facebook" target="_blank"></a> -->
+                             <a href="https://www.facebook.com" class="facebook" target="_blank"></a>
                             <!-- <a href="https://www.messenger.com" class="messenger" target="_blank"></a> -->
                             <!-- <a href="https://www.whatsapp.com" class="whatsapp" target="_blank"></a> -->
-                            <!-- <a href="https://www.instagram.com" class="instagram" target="_blank"></a> -->
+                            <a href="https://www.instagram.com" class="instagram" target="_blank"></a> 
                             <a href="https://www.twitter.com/" class="twitter" target="_blank"></a>
                             <a href="https://www.youtube.com/" class="youtube" target="_blank"></a>
                             <a href="https://www.snapchat.com/" class="snapchat" target="_blank"></a>
