--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="contain">
                 <div>
                     <div>
-                        <h1 class="logo title" style="margin: 50px; ">David</h1>
+                        <h1 class="logo title" style="margin: 50px; ">Do you want to cut down your sales cycle?</h1>
                         <h1 class="title">Hi As Hi<br />TO THE FUTURE</h1>
                         <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         <!-- Set the data-countdown value with this format: yyyy/mm/dd hh:ii:ss -->
