--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="contain">
                 <div>
                     <div>
-                        <h1 class="logo title" style="margin: 30px; ">Spend your time with Qualified Lead!</h1>
-                        <h1 class="title">Hi As Hi<br />TO THE FUTURE</h1>
+                        <h1 class="logo title" style="margin: 40px; ">Accelerate Your Sales Cycle!</h1>
+                        <h1 class="title">Spend more time with your qualifed sales lead</h1>
                         <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         <!-- Set the data-countdown value with this format: yyyy/mm/dd hh:ii:ss -->
                         <!-- Note: set the time in 0-24 format, two digits for each: hours, minutes and seconds -->
