--- a/index.html
+++ b/index.html
@@ -62,9 +62,19 @@
             <div class="contain">
                 <div>
                     <div>
-                        <h1 class="logo title" style="margin: 20px; ">Accelerate Your Sales Cycle!</h1>
-                       <! -- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
-                        <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
+                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
+
+                       <h2 class="main-heading">Accelerate your sales cycle
+Build Better Pipeline</h2>
+                        <p class="description">
+                            We help IT product sales and services organization by offering inside sales, business development services
+                        </p>
+                        <h3 class="description title"> Allowed your sales staff to:</h3>
+                        <ul class="description ">
+                            <li>Engage the right people with the qualified sales leads</li>
+                            <li>Build better pipeline and close more deals</li>
+                        </ul>
                         <!-- Set the data-countdown value with this format: yyyy/mm/dd hh:ii:ss -->
                         <!-- Note: set the time in 0-24 format, two digits for each: hours, minutes and seconds -->
                         <!-- To enable the countdown, uncomment the import .js line and the next line: -->
