social and contact info commented
social and contact info commented

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="contain">
                 <div>
                     <div>
-                        <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
-                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
+                       <!--  <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
+ -->                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
 
                        <h2 class="main-heading">Accelerate your sales cycle
 Build Better Pipeline</h2>
@@ -98,7 +98,7 @@ Build Better Pipeline</h2>
 							</div> -->
                         <!-- BUTTONS SECTION -->
                        
-                        <div class="row text-center mt-200">
+                      <!--   <div class="row text-center mt-200">
 
                             <div class="col-md-3">
                                 <a class="btn-floating blue accent-1">
@@ -117,15 +117,15 @@ Build Better Pipeline</h2>
                                 <p class="mb-0">sale@gmail.com</p>
                             </div>
                         </div>
-                        
+     -->                    
                         <div class="social">
-                             <a href="https://www.facebook.com" class="facebook" target="_blank"></a>
-                            <!-- <a href="https://www.messenger.com" class="messenger" target="_blank"></a> -->
+<!--                             <a href="https://www.facebook.com" class="facebook" target="_blank"></a>
+ -->                            <!-- <a href="https://www.messenger.com" class="messenger" target="_blank"></a> -->
                             <!-- <a href="https://www.whatsapp.com" class="whatsapp" target="_blank"></a> -->
-                            <a href="https://www.instagram.com" class="instagram" target="_blank"></a> 
-                            <a href="https://www.twitter.com/" class="twitter" target="_blank"></a>
-                            <a href="https://www.youtube.com/" class="youtube" target="_blank"></a>
-                            <a href="https://www.snapchat.com/" class="snapchat" target="_blank"></a>
+                          <!--   <a href="https://www.instagram.com" class="instagram" target="_blank"></a> 
+ -->                          <!--   <a href="https://www.twitter.com/" class="twitter" target="_blank"></a> -->
+                           <!--  <a href="https://www.youtube.com/" class="youtube" target="_blank"></a> -->
+                          <!--   <a href="https://www.snapchat.com/" class="snapchat" target="_blank"></a> -->
                             <!-- <a href="https://www.spotify.com" class="spotify" target="_blank"></a> -->
                         </div>
                     </div>
