--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                        <!--  <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
  -->                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
 
-                       <h2 class="main-heading">Accelerate your sales cycle
+                       <h2 class="main-heading logo title">Accelerate your sales cycle
 Build Better Pipeline</h2>
-                        <p class="description">
+                        <p class="description david_description">
                             We help IT product sales and services organization by offering inside sales, business development services
                         </p>
-                        <h3 class="description title"> Allowed your sales staff to:</h3>
-                        <ul class="description ">
-                            <li>Engage the right people with the qualified sales leads</li>
-                            <li>Build better pipeline and close more deals</li>
-                        </ul>
+                        <h3 class="main-heading logo "> Allowed your sales staff to:</h3>
+                        <ol class="description david_description " style="list-style-type:disc;">
+                            <li style="margin: 10px 0px;">Engage the right people with the qualified sales leads</li>
+                            <li style="margin: 10px 0px;">Build better pipeline and close more deals</li>
+                        </ol>
                         <!-- Set the data-countdown value with this format: yyyy/mm/dd hh:ii:ss -->
                         <!-- Note: set the time in 0-24 format, two digits for each: hours, minutes and seconds -->
                         <!-- To enable the countdown, uncomment the import .js line and the next line: -->
