--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Hi Hello - Contact Pages for Leads Generation</title>
+    <title>Accelerate your sales cycle
+Build Better Pipeline</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
@@ -15,7 +16,7 @@
 
     <!-- Facebook and Twitter Share Informations -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="We help IT product sales and services organization by offering inside sales, business development services" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
@@ -70,7 +71,7 @@ Build Better Pipeline</h2>
                         <p class="description david_description">
                             We help IT product sales and services organization by offering inside sales, business development services
                         </p>
-                        <h3 class="main-heading logo "> Allowed your sales staff to:</h3>
+                        <h3 class="main-heading logo title"> Allowed your sales staff to</h3>
                         <ol class="description david_description " style="list-style-type:disc;">
                             <li style="margin: 10px 0px;">Engage the right people with the qualified sales leads</li>
                             <li style="margin: 10px 0px;">Build better pipeline and close more deals</li>
