--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@ Build Better Pipeline</h2>
                         <p class="description david_description">
                             We help IT product sales and services organization by offering inside sales, business development services
                         </p>
-                        <h3 class="main-heading logo title"> Allowed your sales staff to</h3>
-                        <ol class="description david_description " style="list-style-type:disc;">
+                        <h3 class="main-heading logo title" style="margin: 20px 0px;"> Allowed Your Sales Staff To</h3>
+                        <p class="description david_description">
+                           Engage the right people with the qualified sales leads <br><br>
+                           Build better pipeline and close more deals
+                        </p>
+                       <!--  <ol class="description david_description" style="list-style-type:disc; font-weight: normal;">
                             <li style="margin: 10px 0px;">Engage the right people with the qualified sales leads</li>
                             <li style="margin: 10px 0px;">Build better pipeline and close more deals</li>
-                        </ol>
+                        </ol> -->
                         <!-- Set the data-countdown value with this format: yyyy/mm/dd hh:ii:ss -->
                         <!-- Note: set the time in 0-24 format, two digits for each: hours, minutes and seconds -->
                         <!-- To enable the countdown, uncomment the import .js line and the next line: -->
