--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Build Better Pipeline</h2>
         <div class="form">
             <div>
                 <div>
-                    <h3 style="color: black;">Contact Me by Filling<br>The Form</h3>
+                    <h3 style="color: black;">Contact us by filling<br>The Form</h3>
                     <!-- START - Contact Form -->
                     <form class="contactMe small" name="contact" method="POST" data-netlify="true">
                         <section>
