--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ By Working On A Better Pipeline</title>
                        <!--  <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
  -->                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
 
-                       <h2 class="main-heading logo title">Accelerate your sales cycle
-Build Better Pipeline</h2>
+                       <h2 class="main-heading logo title">Accelerates your sales cycle
+By Working On A Better Pipeline</h2>
                         <p class="description david_description">
                             We help IT product sales and services organization by offering inside sales, business development services
                         </p>
