--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ By Working On A Better Pipeline</title>
                        <!--  <h1 class="logo title" style="margin: 20px; ">ServixChange.Com</h1>
  -->                       <!--- <h1 class="title">Spend more time with your qualifed sales lead</h1> -->
 
-                       <h2 class="main-heading logo title">Acceleratesing your sales cycle
+                       <h2 class="main-heading logo title">Accelerate your sales cycle
 By Working On A Better Pipeline</h2>
                         <p class="description david_description">
                             We help IT product sales and services organization by offering inside sales, business development services
                         </p>
-                        <h2 class="main-heading logo title" style="margin: 20px 0px;"> Allowed Your Sales Staff To</h3>
+                        <h2 class="main-heading logo title"> Allowed Your Sales Staff To</h2>
                         <p class="description david_description">
                            Engage the right people with the qualified sales leads <br><br>
                            Build better pipeline and close more deals
