--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@ By Working On A Better Pipeline</h2>
                         <section>
                             <div class="form-row">
                                 <div class="title">Your name</div>
-                                <input type="text" name="name" class="field" placeholder="Your name" required>
+                                <input type="text" name="name" class="field" placeholder="Name" required>
                             </div>
                             <div class="form-row">
                                 <div class="title">Your e-mail</div>
-                                <input type="email" name="email" class="field" placeholder="Your e-mail" required>
+                                <input type="email" name="email" class="field" placeholder="Email" required>
                             </div>
                             <div class="form-row">
                                 <div class="title">Your phone number</div>
-                                <input type="tel" name="phone" class="field" placeholder="Your phone number" required>
+                                <input type="tel" name="phone" class="field" placeholder="Contact Number" required>
                             </div>
                             <div class="form-row">
-                                <div class="title">Your phone number</div>
+                                <div class="title">Contact number</div>
                                 <textarea  name="message" class="form-control" placeholder="Message me *" rows="4" ></textarea>
                             </div>
 
